Fixes a bug in ProjectionImpl where bias origins and terminations weren't being removed. A number of other minor style fixes.