@@ -59,7 +59,7 @@ public class BooleanHandler extends BaseHandler {
 		
 		listener.setProxy(new ConfigurationChangeListener.EditorProxy() {
 			public Object getValue() {
-				return new Boolean(cb.isSelected());
+				return Boolean.valueOf(cb.isSelected());
 			}
 		});
 		button.addActionListener(listener);
@@ -87,7 +87,7 @@ public class BooleanHandler extends BaseHandler {
 	 * @see ca.nengo.config.ConfigurationHandler#getDefaultValue(java.lang.Class)
 	 */
 	public Object getDefaultValue(Class<?> c) {
-		return new Boolean(false);
+		return Boolean.valueOf(false);
 	}
 	
 }
