@@ -26,8 +26,8 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		interpreter.registerFunction("const", c);
 		PostfixFunction f = (PostfixFunction) interpreter.parse("const(x0, x1)", 2);
 		List<Serializable> l = f.getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals(c, l.get(2));
 		
 		try {
@@ -48,155 +48,155 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		// basic binary cases ...
 		f = interpreter.parse("x0 + x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("+", l.get(2).toString());
 		TestUtil.assertClose(2f, f.map(new float[]{1f, 1f}), tolerance);
 		
 		f = interpreter.parse("x0 - x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("-", l.get(2).toString());
 		TestUtil.assertClose(0f, f.map(new float[]{1f, 1f}), tolerance);
 		
 		f = interpreter.parse("x0 * x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("*", l.get(2).toString());
 		TestUtil.assertClose(1f, f.map(new float[]{1f, 1f}), tolerance);
 		
 		f = interpreter.parse("x0 / x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("/", l.get(2).toString());
 		TestUtil.assertClose(.5f, f.map(new float[]{1f, 2f}), tolerance);
 		
 		f = interpreter.parse("x0 ^ x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("^", l.get(2).toString());
 		TestUtil.assertClose(4f, f.map(new float[]{2f, 2f}), tolerance);
 		
 		f = interpreter.parse("x0 < x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("<", l.get(2).toString());
 		TestUtil.assertClose(1f, f.map(new float[]{0f, 1f}), tolerance);
 		TestUtil.assertClose(0f, f.map(new float[]{1f, 0f}), tolerance);
 		
 		f = interpreter.parse("x0 > x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals(">", l.get(2).toString());
 		TestUtil.assertClose(0f, f.map(new float[]{0f, 1f}), tolerance);
 		TestUtil.assertClose(1f, f.map(new float[]{1f, 0f}), tolerance);
 		
 		f = interpreter.parse("x0 & x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("&", l.get(2).toString());
 		TestUtil.assertClose(1f, f.map(new float[]{1f, 1f}), tolerance);
 		TestUtil.assertClose(0f, f.map(new float[]{0f, 1f}), tolerance);
 		
 		f = interpreter.parse("x0 | x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("|", l.get(2).toString());
 		TestUtil.assertClose(0f, f.map(new float[]{0f, 0f}), tolerance);
 		TestUtil.assertClose(1f, f.map(new float[]{0f, 1f}), tolerance);
 		
 		f = interpreter.parse("x0|x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("|", l.get(2).toString());
 		
 		f = interpreter.parse("x0| x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("|", l.get(2).toString());
 		
 		f = interpreter.parse("x0 |x1", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("|", l.get(2).toString());
 		
 		// basic unary cases ...  
 		f = interpreter.parse("x0", 1);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		TestUtil.assertClose(1f, f.map(new float[]{1f}), tolerance);
 		
 		f = interpreter.parse("-x0", 1);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertEquals("~", l.get(1).toString());
 		TestUtil.assertClose(-1f, f.map(new float[]{1f}), tolerance);
 		
 		f = interpreter.parse("!x0", 1);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertEquals("!", l.get(1).toString());
 		TestUtil.assertClose(0f, f.map(new float[]{1f}), tolerance);
 		TestUtil.assertClose(1f, f.map(new float[]{0f}), tolerance);
 		
 		f = interpreter.parse("! x0", 1);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertEquals("!", l.get(1).toString());
 		
 		//precedence ... 
 		f = interpreter.parse("x0 + x1 + x2", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("+", l.get(2).toString());
-		assertEquals(new Integer(2), l.get(3));
+		assertEquals(Integer.valueOf(2), l.get(3));
 		assertEquals("+", l.get(4).toString());
 		TestUtil.assertClose(6f, f.map(new float[]{1f, 2f, 3f}), tolerance);
 		
 		f = interpreter.parse("x0 * x1 + x2", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("*", l.get(2).toString());
-		assertEquals(new Integer(2), l.get(3));
+		assertEquals(Integer.valueOf(2), l.get(3));
 		assertEquals("+", l.get(4).toString());
 		TestUtil.assertClose(5f, f.map(new float[]{1f, 2f, 3f}), tolerance);
 		
 		f = interpreter.parse("x0 / x1 - x2", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("/", l.get(2).toString());
-		assertEquals(new Integer(2), l.get(3));
+		assertEquals(Integer.valueOf(2), l.get(3));
 		assertEquals("-", l.get(4).toString());
 		TestUtil.assertClose(-2.5f, f.map(new float[]{1f, 2f, 3f}), tolerance);
 		
 		f = interpreter.parse("x0 + x1 * x2", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
 		assertEquals("*", l.get(3).toString());
 		assertEquals("+", l.get(4).toString());
 		TestUtil.assertClose(7f, f.map(new float[]{1f, 2f, 3f}), tolerance);
 		
 		f = interpreter.parse("x0 + x1 * -x2", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
 		assertEquals("~", l.get(3).toString());
 		assertEquals("*", l.get(4).toString());
 		assertEquals("+", l.get(5).toString());
@@ -204,51 +204,51 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		
 		f = interpreter.parse("x0 * x1 ^ x2", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
 		assertEquals("^", l.get(3).toString());
 		assertEquals("*", l.get(4).toString());
 		TestUtil.assertClose(8f, f.map(new float[]{1f, 2f, 3f}), tolerance);
 		
 		f = interpreter.parse("x0 * x1 ^ x2 & x3", 4);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
 		assertEquals("^", l.get(3).toString());
 		assertEquals("*", l.get(4).toString());
-		assertEquals(new Integer(3), l.get(5));
+		assertEquals(Integer.valueOf(3), l.get(5));
 		assertEquals("&", l.get(6).toString());
 		TestUtil.assertClose(1f, f.map(new float[]{1f, 2f, 3f, 1f}), tolerance);
 		
 		//brackets ... 
 		f = interpreter.parse("x0 * (x1 + x2)", 3);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
 		assertEquals("+", l.get(3).toString());
 		assertEquals("*", l.get(4).toString());
 		TestUtil.assertClose(5f, f.map(new float[]{1f, 2f, 3f}), tolerance);
 		
 		f = interpreter.parse("(x0 * x1) ^ (x2 & x3)", 4);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertEquals("*", l.get(2).toString());
-		assertEquals(new Integer(2), l.get(3));
-		assertEquals(new Integer(3), l.get(4));
+		assertEquals(Integer.valueOf(2), l.get(3));
+		assertEquals(Integer.valueOf(3), l.get(4));
 		assertEquals("&", l.get(5).toString());
 		assertEquals("^", l.get(6).toString());
 		TestUtil.assertClose(2f, f.map(new float[]{1f, 2f, 3f, 4f}), tolerance);
 		
 		f = interpreter.parse("x0 ^ (x1 * (x2 + x3))", 4);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
-		assertEquals(new Integer(3), l.get(3));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
+		assertEquals(Integer.valueOf(3), l.get(3));
 		assertEquals("+", l.get(4).toString());
 		assertEquals("*", l.get(5).toString());
 		assertEquals("^", l.get(6).toString());
@@ -257,17 +257,17 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		//functions ... 
 		f = interpreter.parse("x0 + sin(x1)", 4);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
 		assertTrue(l.get(2) instanceof SimpleFunctions.Sin);
 		assertEquals("+", l.get(3).toString());
 		TestUtil.assertClose(2f, f.map(new float[]{2f, (float) Math.PI, 1f, 1f}), tolerance);
 		
 		f = interpreter.parse("x0 + sin(x1 + x2)", 4);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
-		assertEquals(new Integer(1), l.get(1));
-		assertEquals(new Integer(2), l.get(2));
+		assertEquals(Integer.valueOf(0), l.get(0));
+		assertEquals(Integer.valueOf(1), l.get(1));
+		assertEquals(Integer.valueOf(2), l.get(2));
 		assertEquals("+", l.get(3).toString());
 		assertTrue(l.get(4) instanceof SimpleFunctions.Sin);
 		assertEquals("+", l.get(5).toString());
@@ -282,7 +282,7 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		
 		f = interpreter.parse("x0 + 5", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertTrue(l.get(1) instanceof Float);
 		TestUtil.assertClose(5f, ((Float) l.get(1)).floatValue(), .0001f);
 		assertEquals("+", l.get(2).toString());
@@ -290,7 +290,7 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		
 		f = interpreter.parse("x0 + 1.5", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertTrue(l.get(1) instanceof Float);
 		TestUtil.assertClose(1.5f, ((Float) l.get(1)).floatValue(), .0001f);
 		assertEquals("+", l.get(2).toString());
@@ -298,7 +298,7 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		
 		f = interpreter.parse("x0 + 0.5", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertTrue(l.get(1) instanceof Float);
 		TestUtil.assertClose(0.5f, ((Float) l.get(1)).floatValue(), .0001f);
 		assertEquals("+", l.get(2).toString());
@@ -306,7 +306,7 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		
 		f = interpreter.parse("x0 + .5", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertTrue(l.get(1) instanceof Float);
 		TestUtil.assertClose(0.5f, ((Float) l.get(1)).floatValue(), .0001f);
 		assertEquals("+", l.get(2).toString());
@@ -314,7 +314,7 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		
 		f = interpreter.parse("x0 + pi", 2);
 		l = ((PostfixFunction) f).getExpressionList();
-		assertEquals(new Integer(0), l.get(0));
+		assertEquals(Integer.valueOf(0), l.get(0));
 		assertTrue(l.get(1) instanceof Float);
 		TestUtil.assertClose((float) Math.PI, ((Float) l.get(1)).floatValue(), .0001f);
 		assertEquals("+", l.get(2).toString());
@@ -340,12 +340,12 @@ public class DefaultFunctionInterpreterTest extends TestCase {
 		assertEquals("*", l.get(2).toString());
 		assertTrue(l.get(3) instanceof Float);
 		TestUtil.assertClose(.5f, ((Float) l.get(3)).floatValue(), .0001f);
-		assertEquals(new Integer(0), l.get(4));
+		assertEquals(Integer.valueOf(0), l.get(4));
 		assertEquals("*", l.get(5).toString());
-		assertEquals(new Integer(1), l.get(6));
-		assertEquals(new Integer(2), l.get(7));
+		assertEquals(Integer.valueOf(1), l.get(6));
+		assertEquals(Integer.valueOf(2), l.get(7));
 		assertEquals("+", l.get(8).toString());
-		assertEquals(new Integer(3), l.get(9));
+		assertEquals(Integer.valueOf(3), l.get(9));
 		assertEquals("^", l.get(10).toString());
 		assertTrue(l.get(11) instanceof SimpleFunctions.Sin);		
 		assertEquals("/", l.get(12).toString());
